k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: there-production
  labels:
    name: there-production
